--- a/src/pages/Product-page/ProductPage.css
+++ b/src/pages/Product-page/ProductPage.css
@@ -21,6 +21,7 @@
     height: 511px;
     margin-top: 2px;
     width: 610px;
+    object-fit: contain;
   }
   
   .product-brand {
